--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div id="navigation" style="width:100%; padding:0;">
                         <ul id="nav" style="width:100%; padding:0;">
                             <li class="nav-item first-nav-item">
-                                <a href="/frontent-assesment/" class="nav-a">
+                                <a href="/frontend-assesment/" class="nav-a">
                                     <span>
                                         <strong>Home</strong>
                                     </span>
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/frontent-assesment/register.html" class="nav-a">
+                                <a href="/frontend-assesment/register.html" class="nav-a">
                                     <span>
                                         <strong>Daftar</strong>
                                     </span>
@@ -155,7 +155,7 @@
                     <div style="width:100%; padding:0;">
                         <ul id="subnav" style="width:100%; padding:0;">
                             <li class="sub-nav-item default-subnav-item">
-                                <a class="subnav-a" href="/frontent-assesment/dingdong.html">
+                                <a class="subnav-a" href="/frontend-assesment/dingdong.html">
                                     <span class="subnav-span">
                                         <strong>Dingdong</strong>
                                     </span>
@@ -179,7 +179,7 @@
                                 <span class="sub-nav-separator"></span>
                             </li>
                             <li class="sub-nav-item default-subnav-item">
-                                <a class="subnav-a" href="/frontent-assesment/card-games.html">
+                                <a class="subnav-a" href="/frontend-assesment/card-games.html">
                                     <span class="subnav-span">
                                         <strong>Card Games</strong>
                                     </span>
@@ -222,7 +222,7 @@
                             </a>
                         </div>
                         <div class="col-6 text-center">
-                            <a href="/frontent-assesment/"><img src="https://91.233.198.11/m/assets/images/logo-rgocasino.png"
+                            <a href="/frontend-assesment/"><img src="https://91.233.198.11/m/assets/images/logo-rgocasino.png"
                                     width="170px" style="margin-top:6px;max-width:100%"></a>
                         </div>
                         <div class="col-3 text-end">
@@ -277,7 +277,7 @@
                             </div>
                             <hr>
                             <div class="d-flex justify-content-between mb-3">
-                                <a href="/frontent-assesment/register.html">Daftar Baru</a>
+                                <a href="/frontend-assesment/register.html">Daftar Baru</a>
                                 <a href="#" class="text-end">Lupa Password</a>
                             </div>
                         </form>
@@ -293,7 +293,7 @@
                     <h5 class="text-sm fw-bold">Menu</h5>
                     <div class="row" style="margin-bottom: 0px;">
                         <div class="col-4 text-center">
-                            <a href="/frontent-assesment/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
+                            <a href="/frontend-assesment/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
                                 <i class="fa fa-home"></i><br>Home
                             </a>
                         </div>
@@ -378,13 +378,13 @@
                 <div class="col-3 bg-blue p-2 d-none d-md-block">
                     <div class="col-12">
                         <div class="col-12">
-                            <a href="/frontent-assesment/register.html">
+                            <a href="/frontend-assesment/register.html">
                                 <img src="https://rgocasino-s3.s3-ap-southeast-1.amazonaws.com/images/others/halamandepancardgames.jpg"
                                     class="img-fluid">
                             </a>
                         </div>
                         <div class="col-12">
-                            <a href="/frontent-assesment/register.html">
+                            <a href="/frontend-assesment/register.html">
                                 <img src="https://rgocasino-s3.s3-ap-southeast-1.amazonaws.com/images/others/halamadepandd.jpg"
                                     class="img-fluid">
                             </a>
@@ -456,73 +456,73 @@
             <div class="col-12 my-3">
                 <div class="row">
                     <div class="col-12 col-md-3 mt-3">
-                        <a href="/frontent-assesment/dingdong.html">
+                        <a href="/frontend-assesment/dingdong.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/LOBBY-RGO-CASINO-dingdong.png">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3">
-                        <a href="/frontent-assesment/card-games.html">
+                        <a href="/frontend-assesment/card-games.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/banner-hkbgaming.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/register.html">
+                        <a href="/frontend-assesment/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-lobby-ogplus.png?2">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/register.html">
+                        <a href="/frontend-assesment/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-vivo-lobbygame.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/dingdong.html">
+                        <a href="/frontend-assesment/dingdong.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/LOBBY-RGO-CASINO-dingdong.png">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/card-games.html">
+                        <a href="/frontend-assesment/card-games.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/banner-hkbgaming.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/register.html">
+                        <a href="/frontend-assesment/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-lobby-ogplus.png?2">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/register.html">
+                        <a href="/frontend-assesment/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-vivo-lobbygame.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/dingdong.html">
+                        <a href="/frontend-assesment/dingdong.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/LOBBY-RGO-CASINO-dingdong.png">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/card-games.html">
+                        <a href="/frontend-assesment/card-games.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/banner-hkbgaming.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/register.html">
+                        <a href="/frontend-assesment/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-lobby-ogplus.png?2">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="/frontent-assesment/register.html">
+                        <a href="/frontend-assesment/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-vivo-lobbygame.jpg">
                         </a>
